tests/test_proof/good/output/functions.catala_en.Proof
[RESULT] [A.z] No two exceptions to ever overlap for this variable
[RESULT] [A.z] This variable never returns an empty error
[RESULT] [A.x] No two exceptions to ever overlap for this variable
[RESULT] [A.x] This variable never returns an empty error
