tests/test_proof/bad/output/enums_unit-overlap.catala_en.Proof
[RESULT] [A.x] This variable never returns an empty error
[RESULT] [A.x] No two exceptions to ever overlap for this variable
[RESULT] [A.y] This variable never returns an empty error
[ERROR] [A.y] At least two exceptions overlap for this variable:
  --> tests/test_proof/bad/enums_unit-overlap.catala_en
   | 
10 |   context y content integer
   |           ^
   + Article
Counterexample generation is disabled so none was generated.
